--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Home Page</title>
   </head>
   <body>
-    <h1>Welcome to <%= title %></h1>
-    <a href="/auth/sign-up">Sign up</a>
+<% if (user) { %>
+  <h1>Welcome to the app, <%= user.username %>!</h1>
+  <a href="/auth/sign-out" class="box">Sign out</a>
+<% } else { %>
+  <h1>Welcome to the app, guest.</h1>
+  <p>
+    <a href="/auth/sign-up" class="box">Sign up</a> or <a href="/auth/sign-in"class="box">sign in</a>.
+  </p>
+<% } %>
   </body>
 </html>
