--- a/style.css
+++ b/style.css
@@ -7,10 +7,21 @@
     padding: 20px;
     border: 1px solid #3b3636;
     border-radius: 5px;
+    background-color: #f0f0f0;
+    margin: 20px auto;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    justify-content: center;
+    display:flex;
+    flex-direction: column; 
 }
 
-h1{
+h1,p{
     text-align: center;
     justify-content: center;
     align-items: center;
+}
+
+.pclass{
+    font-size: 1.5rem;
 }
