--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
   <a href="/auth/sign-out" class="box">Sign out</a>
 <% } else { %>
   <h1>Welcome to the app, guest.</h1>
-  <p>
-    <a href="/auth/sign-up" class="box">Sign up</a> or <a href="/auth/sign-in"class="box">sign in</a>.
+  <p class="pclass">
+    <a href="/auth/sign-up" class="box">Sign up</a> or <a href="/auth/sign-in"class="box">sign in</a>
   </p>
 <% } %>
   </body>
